--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -170,8 +170,10 @@ end
 
 params['blobstore'] = {
   'provider' => p('blobstore.provider'),
-  'options' => blobstore_options
+  'options' => blobstore_options,
 }
+
+params['blobstore']['options']['verify_multidigest_path'] = '/var/vcap/packages/verify-multidigest/bin/verify-multidigest'
 
 if p('blobstore.provider') == "s3"
    params['blobstore']['provider'] = "s3cli"
@@ -283,6 +285,23 @@ end
 
 if_p('director.backup_destination') do |backup_destination|
   params['backup_destination'] = backup_destination
+
+  if backup_destination['provider'] == "s3"
+     params['backup_destination']['provider'] = 's3cli'
+     params['backup_destination']['options'] = params['backup_destination'].fetch('options', {}).merge!({
+       's3cli_config_path' => "/var/vcap/data/tmp/director",
+       's3cli_path' => "/var/vcap/packages/s3cli/bin/s3cli"
+     })
+  end
+
+  if backup_destination['provider']  == "dav"
+     params['backup_destination']['provider'] = 'davcli'
+     params['backup_destination']['options'] = params['backup_destination'].fetch('options', {}).merge!({
+       'davcli_config_path' => "/var/vcap/data/tmp/director",
+       'davcli_path' => "/var/vcap/packages/davcli/bin/davcli"
+     })
+  end
+
 end
 
 if_p('director.default_ssh_options.gateway_host',
