--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -50,11 +50,13 @@ blobstore: &director_blobstore
   provider: local
   options:
     blobstore_path: <%= blobstore_storage_dir %>
+    verify_multidigest_path: <%= verify_multidigest_path %>
 
 backup_destination:
   provider: local
   options:
     blobstore_path: <%= sandbox_root %>/backup_destination
+    verify_multidigest_path: <%= verify_multidigest_path %>
 
 compiled_package_cache:
   <<: *director_blobstore
