Add JSON plugin to bosh * sends heartbeats to stdin of any process located in /var/vcap/jobs/*/bin/bosh-monitor/* * Change the system.healthy metric from int to string for conformity * Translate the metric value to string when hashing the metrics object.
Signed-off-by: Robert Sullivan <rsullivan@pivotal.io>

--- a/jobs/health_monitor/templates/health_monitor.yml.erb
+++ b/jobs/health_monitor/templates/health_monitor.yml.erb
@@ -101,6 +101,16 @@ if p('hm.email_notifications')
   params['plugins'] << smtp_plugin
 end
 
+if p('hm.json_enabled')
+ params['plugins'] << {
+    'name' => 'json',
+    'events' => [
+      'heartbeat'
+    ],
+    'options' => {},
+  }
+end
+
 if p('hm.tsdb_enabled')
   params['plugins'] << {
     'name' => 'tsdb',
