--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -30,7 +30,10 @@ params = {
   'remove_dev_tools' => p('director.remove_dev_tools'),
   'log_access_events_to_syslog' => p('director.log_access_events_to_syslog'),
   'flush_arp' => p('director.flush_arp'),
-  'local_dns' => p('director.local_dns')
+  'local_dns' => {
+      'enabled' => p('director.local_dns.enabled'),
+      'include_index' => p('director.local_dns.include_index'),
+  },
 }
 
 config_server = {
