PR Changes: * Update Readme * Emit Alerts as well as Heartbeats in JSON plugin
Signed-off-by: Kira Combs <kcombs@pivotal.io>

--- a/jobs/health_monitor/templates/health_monitor.yml.erb
+++ b/jobs/health_monitor/templates/health_monitor.yml.erb
@@ -105,7 +105,8 @@ if p('hm.json_enabled')
  params['plugins'] << {
     'name' => 'json',
     'events' => [
-      'heartbeat'
+      'alert',
+      'heartbeat',
     ],
     'options' => {},
   }
