--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -173,7 +173,7 @@ params['blobstore'] = {
   'options' => blobstore_options,
 }
 
-params['blobstore']['options']['verify_multidigest_path'] = '/var/vcap/packages/verify-multidigest/bin/verify-multidigest'
+params['verify_multidigest_path'] = '/var/vcap/packages/verify-multidigest/bin/verify-multidigest'
 
 if p('blobstore.provider') == "s3"
    params['blobstore']['provider'] = "s3cli"
