--- a/jobs/gonats/templates/go_nats.cfg.erb
+++ b/jobs/gonats/templates/go_nats.cfg.erb
@@ -1,6 +1,10 @@
 net: <%= p("gonats.listen_address") %>
 port: <%= p("gonats.port") %>
 
+<% if_p('gonats.http.port') do |port| %>
+http: <%= port %>
+<% end %>
+
 logtime: true
 
 pid_file: /var/vcap/sys/run/gonats/gnatsd.pid
