Allow director to take NATS server CA cert
- Director now connects to NATS server only over
  verfified TLS connection.

[#139229129](https://www.pivotaltracker.com/story/show/139229129)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -154,3 +154,5 @@ remove_dev_tools: <%= remove_dev_tools %>
 record_events: true
 
 director_ips: <%= director_ips %>
+
+nats_server_ca_path: <%= nats_server_ca_path %>
