--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -175,6 +175,8 @@ params['blobstore'] = {
 
 params['verify_multidigest_path'] = '/var/vcap/packages/verify_multidigest/bin/verify-multidigest'
 
+params['version'] = '0.0.0'
+
 if p('blobstore.provider') == "s3"
    params['blobstore']['provider'] = "s3cli"
    params['blobstore']['options']['s3cli_config_path'] = "/var/vcap/data/tmp/director"
