--- a/jobs/nats/templates/nats_ctl.erb
+++ b/jobs/nats/templates/nats_ctl.erb
@@ -4,11 +4,12 @@
 sysctl -w net.ipv4.neigh.default.gc_thresh3=4096
 sysctl -w net.ipv4.neigh.default.gc_thresh2=2048
 
-export PATH=/var/vcap/packages/ruby/bin:$PATH
+export PATH=/var/vcap/packages/golang/bin:$PATH
 export BUNDLE_GEMFILE=/var/vcap/packages/nats/Gemfile
 
 RUN_DIR=/var/vcap/sys/run/nats
 LOG_DIR=/var/vcap/sys/log/nats
+CONFIG_FILE=/var/vcap/jobs/nats/config/nats.cfg
 PIDFILE=$RUN_DIR/nats.pid
 RUNAS=vcap
 
@@ -19,23 +20,19 @@ case $1 in
     echo $$ > $PIDFILE
     chown -R $RUNAS:$RUNAS $RUN_DIR $LOG_DIR
 
-    ulimit -n 65536
-    exec chpst -u $RUNAS:$RUNAS \
-      bundle exec nats-server \
-      -c /var/vcap/jobs/nats/config/nats.yml \
-      >>$LOG_DIR/nats.stdout.log \
-      2>>$LOG_DIR/nats.stderr.log
+    exec chpst -u $RUNAS:$RUNAS /var/vcap/packages/gonats/bin/gnatsd \
+      -c $CONFIG_FILE \
+      >>  $LOG_DIR/nats.stdout.log \
+      2>> $LOG_DIR/nats.stderr.log
     ;;
 
   stop)
-    PID=$(head -1 $PIDFILE)
-    kill $PID
-    while [ -e /proc/$PID ]; do sleep 0.1; done
-    rm -f $PIDFILE
+    if [ -f $PIDFILE ]; then
+      kill -9 `cat $PIDFILE` || true
+      rm -f $PIDFILE
+    fi
     ;;
 
   *)
-
-  echo "Usage: nats_ctl {start|stop}" ;;
+    echo "Usage: nats_ctl {start|stop}" ;;
 esac
-exit 0
