--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -34,6 +34,7 @@ params = {
   'local_dns' => {
       'enabled' => p('director.local_dns.enabled'),
       'include_index' => p('director.local_dns.include_index'),
+      'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
 }
 
