--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -45,6 +45,7 @@ trusted_certs: <%= trusted_certs %>
 local_dns:
   enabled: <%= local_dns['enabled'] %>
   include_index: <%= local_dns['include_index'] %>
+  use_dns_addresses: <%= local_dns['use_dns_addresses'] %>
 
 verify_multidigest_path: <%= verify_multidigest_path %>
 
