Enable mutual TLS
- Director and Health Monitor now connect to NATs using mutual TLS
- Send client certificate information to Agent

[#149182955](https://www.pivotaltracker.com/story/show/149182955)

Signed-off-by: Sameer Vohra <svohra@pivotal.io>

--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -12,6 +12,10 @@ params = {
   'mbus' => "nats://#{p('nats.user')}:#{p('nats.password')}@#{p('nats.address')}:#{p('nats.port')}",
   'nats_server_ca_path' => '/var/vcap/jobs/director/config/nats_server_ca.cert',
   'nats_ca' => p('nats.cert.ca'),
+  'nats_tls' => {
+    'private_key_path' => '/var/vcap/jobs/director/config/nats/private_key',
+    'certificate_path' => '/var/vcap/jobs/director/config/nats/certificate.pem'
+  },
   'dir' => '/var/vcap/store/director',
   'db' => {
     'adapter' => p('director.db.adapter'),
