--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -15,6 +15,8 @@ authorization {
 tls {
   cert_file:  "/var/vcap/jobs/nats/config/nats_cert.pem"
   key_file:   "/var/vcap/jobs/nats/config/nats_key.key"
+  ca_file:    "/var/vcap/jobs/nats/config/nats_ca.pem"
+  verify:     true
   timeout:    2
 }
 
