--- a/src/bosh-dev/assets/sandbox/health_monitor.yml.erb
+++ b/src/bosh-dev/assets/sandbox/health_monitor.yml.erb
@@ -7,6 +7,8 @@ mbus:
   user:
   password:
   ca_path: <%= get_nats_server_ca_path %>
+  private_key_path: <%= nats_conf['private_key_path'] %>
+  certificate_path: <%= nats_conf['certificate_path'] %>
 
 director: &director
   endpoint: <%= director_url %>
