Include worker instance and hostname in task debug
[#148458125](https://www.pivotaltracker.com/story/show/148458125)

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -1,6 +1,9 @@
 ---
 name: <%= director_name %>
 uuid: deadbeef
+runtime:
+  ip: 127.1.127.1
+  instance: some-name/some-id
 
 port: <%= director_ruby_port %>
 mbus: nats://localhost:<%= nats_port %>
