--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -1,6 +1,10 @@
 <%=
 params = {
   'name' => p('director.name'),
+  'runtime' => {
+    'ip' => spec.ip,
+    'instance' => "#{spec.job.name}/#{spec.id}",
+  },
   'port' => p('director.backend_port'),
   'encryption' => p('director.encryption'),
   'max_tasks' => p('director.max_tasks'),
