--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -14,11 +14,14 @@ params = {
     'file' =>  "/var/vcap/sys/log/director/<" + "%= ENV['COMPONENT'] %" + ">.debug.log"
   },
   'mbus' => "nats://#{p('nats.user')}:#{p('nats.password')}@#{p('nats.address')}:#{p('nats.port')}",
-  'nats_server_ca_path' => '/var/vcap/jobs/director/config/nats_server_ca.cert',
-  'nats_ca' => p('nats.cert.ca'),
-  'nats_tls' => {
-    'private_key_path' => '/var/vcap/jobs/director/config/nats/private_key',
-    'certificate_path' => '/var/vcap/jobs/director/config/nats/certificate.pem'
+  'nats' => {
+    'server_ca_path' => '/var/vcap/jobs/director/config/nats_server_ca.pem',
+    'client_certificate_path' => '/var/vcap/jobs/director/config/nats_client_certificate.pem',
+    'client_private_key_path' => '/var/vcap/jobs/director/config/nats_client_private_key',
+    'agent' => {
+      'client_certificate_path' => '/var/vcap/jobs/director/config/nats_agent_certificate.pem',
+      'client_private_key_path' => '/var/vcap/jobs/director/config/nats_agent_private_key'
+    }
   },
   'dir' => '/var/vcap/store/director',
   'db' => {
