--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -160,28 +160,10 @@ record_events: true
 
 director_ips: <%= director_ips %>
 
-nats_server_ca_path: <%= nats_server_ca_path %>
-
-nats_ca: |
-  -----BEGIN CERTIFICATE-----
-  MIIC+jCCAeKgAwIBAgIRANmGnsJyJP9sAajpjA00BWMwDQYJKoZIhvcNAQELBQAw
-  JjEMMAoGA1UEBhMDVVNBMRYwFAYDVQQKEw1DbG91ZCBGb3VuZHJ5MB4XDTE3MDcy
-  ODE3MDE1NloXDTE4MDcyODE3MDE1NlowJjEMMAoGA1UEBhMDVVNBMRYwFAYDVQQK
-  Ew1DbG91ZCBGb3VuZHJ5MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA
-  ySwIG6Yfa6KDj4+ez6Dpmf/rA0bkhIkP5m5rni+//mR6/ZTtGx53Bvs7uA+uWC0r
-  qiYbGELplk/q8EbXC4+kDKVoMcER3qsLsoIWT7225Tv5ga7fEgnr/pIPoZjenMMN
-  bpQgthqpaT7PkhD+ww06f0b6nbrjzRLTh2fxEMb6hbUavA85Ykvj4K9cuIyMxNM4
-  YkSPpD3BtEEAFqxJ+5hD+XohqG8NXJTVwFGSlSlk9gpFKxWs+NtmoSTsYkRX7cQL
-  E2Ze/tdZlyZSSvoHL0YqP6lIb44q/HLNJPRD1JlYUnrccCZ7cKFulcqngkbxLUD/
-  23hvS7X7Chyx3Q1Qu4ah5wIDAQABoyMwITAOBgNVHQ8BAf8EBAMCAQYwDwYDVR0T
-  AQH/BAUwAwEB/zANBgkqhkiG9w0BAQsFAAOCAQEAivuV0TowsoYBhkkXYna4uTR1
-  LOCxGjK/pH3p4M+/fHyiwf32XrIlCiSMwuEXT9RHm8i0alQre4lyeQo3T0+02/9+
-  9mbQoDwDCz1fx7PkRUFvGzAvsWr8usUPWsOztXGHPrUALx7xARkLagm5I/Y2MmMD
-  fTTZaDNCFDo6un+GlTpkj4AdVHdK9L4XknL86a5HfD6u5QJVpJfVGVqAkPJd3FKa
-  O9qcZwrDtxE6Y0BTEzGYE8yn+aU87ds1b2d5rm5E3T6TEilo+m8xibW8dt7PE1bU
-  2JQQidD7UQcHcbAMnvLddgahBuEyrpXiD2Myo8Z4XQphVoQzU/iQ8i3Esxf5KA==
-  -----END CERTIFICATE-----
-
-nats_tls:
-  certificate_path: <%= nats_tls['certificate_path'] %>
-  private_key_path: <%= nats_tls['private_key_path'] %>
+nats:
+  server_ca_path: <%= nats_server_ca_path %>
+  client_certificate_path: <%= nats_director_tls['certificate_path'] %>
+  client_private_key_path: <%= nats_director_tls['private_key_path'] %>
+  agent:
+    client_certificate_path: <%= nats_agent_tls['certificate_path'] %>
+    client_private_key_path: <%= nats_agent_tls['private_key_path'] %>
