expand director worker inbox to include agent_id
[#150333329](https://www.pivotaltracker.com/story/show/150333329)

Signed-off-by: Bozhidar Lenchov <blenchov@pivotal.io>

--- a/jobs/nats/templates/nats.cfg.erb
+++ b/jobs/nats/templates/nats.cfg.erb
@@ -15,7 +15,7 @@ authorization {<% if p('nats.allow_legacy_agents') %>
       "agent.*",
       "hm.director.alert"
     ]
-    subscribe: ["director.*.*"]
+    subscribe: ["director.>"]
   }
 
   AGENT_PERMISSIONS: {
@@ -23,7 +23,7 @@ authorization {<% if p('nats.allow_legacy_agents') %>
       "hm.agent.heartbeat._CLIENT_ID",
       "hm.agent.alert._CLIENT_ID",
       "hm.agent.shutdown._CLIENT_ID",
-      "director.*.*"
+      "director.*._CLIENT_ID.*"
     ]
     subscribe: ["agent._CLIENT_ID"]
   }
