Fix legacy sandbox test reset logic.  Add full permissions client for testing NATS traffic.
[#150329220](https://www.pivotaltracker.com/story/show/150329220)

Signed-off-by: Dale Wick <dwick@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/nats.conf.erb
+++ b/src/bosh-dev/assets/sandbox/nats.conf.erb
@@ -38,10 +38,16 @@ authorization {
     ]
   }
 
+  FULL_PERMISSIONS: {
+    publish: [">"]
+    subscribe: [">"]
+  }
+
   certificate_clients: [
     {client_name: director.bosh, permissions: $DIRECTOR_PERMISSIONS},
     {client_name: agent.bosh, permissions: $AGENT_PERMISSIONS},
     {client_name: hm.bosh, permissions: $HM_PERMISSIONS},
+    {client_name: integration.test.bosh, permissions: $FULL_PERMISSIONS},
   ]
 }
 
