Set ruby default external encoding through LANG
Export LANG=en_US.UTF-8 in all ruby ctl scripts.
LANG env var is not passed through monit. Ruby
considers LANG to set its default external encoding.

Fixes cloudfoundry/cf-release#1234

[#150369990](https://www.pivotaltracker.com/story/show/150369990)

--- a/jobs/director/templates/scheduler_ctl.erb
+++ b/jobs/director/templates/scheduler_ctl.erb
@@ -10,6 +10,7 @@ RUNAS=vcap
 PATH=/var/vcap/packages/ruby/bin:$PATH
 PATH=$PATH:/var/vcap/jobs/director/bin
 export PATH
+export LANG=en_US.UTF-8
 
 export BUNDLE_GEMFILE=/var/vcap/packages/director/Gemfile
 export GEM_HOME=/var/vcap/packages/director/gem_home/ruby/2.3.0
