--- a/jobs/director/templates/sync_dns_ctl.erb
+++ b/jobs/director/templates/sync_dns_ctl.erb
@@ -8,6 +8,7 @@ PIDFILE=$RUN_DIR/sync_dns.pid
 RUNAS=vcap
 
 export PATH=/var/vcap/packages/ruby/bin:/var/vcap/jobs/director/bin:$PATH
+export LANG=en_US.UTF-8
 
 export BUNDLE_GEMFILE=/var/vcap/packages/director/Gemfile
 export GEM_HOME=/var/vcap/packages/director/gem_home/ruby/2.3.0
