--- a/jobs/director/templates/director_ctl.erb
+++ b/jobs/director/templates/director_ctl.erb
@@ -19,6 +19,7 @@ LD_LIBRARY_PATH=/var/vcap/packages/mysql/lib/mysql:$LD_LIBRARY_PATH
 
 export LD_LIBRARY_PATH
 export PATH
+export LANG=en_US.UTF-8
 
 export BUNDLE_GEMFILE=/var/vcap/packages/director/Gemfile
 export GEM_HOME=/var/vcap/packages/director/gem_home/ruby/2.3.0
