Unwrap properties from hash when testing templates
[#150502401](https://www.pivotaltracker.com/story/show/150502401)

Signed-off-by: Tyler Schultz <tschultz@pivotal.io>

--- a/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config.erb
+++ b/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config.erb
@@ -12,6 +12,7 @@
       'name' => spec.name,
       'network_data' => spec.networks.network1.foo,
       'network_ip' => spec.networks.network1.ip,
+      'job_name' => spec.job.name, #spec.job is deprecated. use spec.name.
   }
 
 
