Unit-tests for templating should still test EvaluationContext.
- We changed the tests so that they were using Bosh::Template::Test
instead of EvaluationContext. This should be changed so that we test
both, using the same templates, to ensure that we won't drift in terms
of functionality.
- Bosh::Template::Test should filter manifest properties that aren't in
the spec.
- Update README so that users have a pointer to the new testing utility
classes.

[#150502401](https://www.pivotaltracker.com/story/show/150502401)

Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config-with-nested.erb
+++ b/src/bosh-template/spec/assets/template-test-release/jobs/web-server/templates/config-with-nested.erb
@@ -1,6 +1,7 @@
 <%=
   config = {
       'works.too' => p('nested.properties.works.too'),
+      'works' => p('nested.properties.works'),
   }
 
   require 'json'
