as an operator i expect that .bosh-internal tld is used for internal components
[#150806810](https://www.pivotaltracker.com/story/show/150806810)

Signed-off-by: Dale Wick <dwick@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/nats.conf.erb
+++ b/src/bosh-dev/assets/sandbox/nats.conf.erb
@@ -44,10 +44,10 @@ authorization {
   }
 
   certificate_clients: [
-    {client_name: director.bosh, permissions: $DIRECTOR_PERMISSIONS},
-    {client_name: agent.bosh, permissions: $AGENT_PERMISSIONS},
-    {client_name: hm.bosh, permissions: $HM_PERMISSIONS},
-    {client_name: integration.test.bosh, permissions: $FULL_PERMISSIONS},
+    {client_name: director.bosh-internal, permissions: $DIRECTOR_PERMISSIONS},
+    {client_name: agent.bosh-internal, permissions: $AGENT_PERMISSIONS},
+    {client_name: hm.bosh-internal, permissions: $HM_PERMISSIONS},
+    {client_name: integration.test.bosh-internal, permissions: $FULL_PERMISSIONS},
   ]
 }
 
