use vendor-package for ruby-2.4 via bosh-packages
[#150905630](https://www.pivotaltracker.com/story/show/150905630)

Signed-off-by: Zachary Gershman <zgershman@pivotal.io>

--- a/jobs/health_monitor/templates/health_monitor_ctl.erb
+++ b/jobs/health_monitor/templates/health_monitor_ctl.erb
@@ -7,7 +7,7 @@ RUNAS=vcap
 CONFIG_DIR=/var/vcap/jobs/health_monitor/config
 STORE_DIR=/var/vcap/store/health_monitor
 
-export PATH=/var/vcap/packages/ruby/bin:$PATH
+source /var/vcap/packages/ruby-2.4/bosh/runtime.env
 export GEM_HOME=/var/vcap/packages/health_monitor/gem_home/ruby/2.4.0
 export BUNDLE_GEMFILE=/var/vcap/packages/health_monitor/Gemfile
 
