--- a/jobs/director/templates/scheduler_ctl.erb
+++ b/jobs/director/templates/scheduler_ctl.erb
@@ -7,7 +7,7 @@ LOG_DIR=/var/vcap/sys/log/director
 PIDFILE=$RUN_DIR/scheduler.pid
 RUNAS=vcap
 
-PATH=/var/vcap/packages/ruby/bin:$PATH
+source /var/vcap/packages/ruby-2.4/bosh/runtime.env
 PATH=$PATH:/var/vcap/jobs/director/bin
 export PATH
 export LANG=en_US.UTF-8
