--- a/jobs/director/templates/worker_ctl.erb
+++ b/jobs/director/templates/worker_ctl.erb
@@ -16,7 +16,7 @@ PATH=/var/vcap/packages/mysql/bin:$PATH
 LD_LIBRARY_PATH=/var/vcap/packages/mysql/lib/mysql:$LD_LIBRARY_PATH
 
 
-PATH=/var/vcap/packages/ruby/bin:$PATH
+source /var/vcap/packages/ruby-2.4/bosh/runtime.env
 PATH=$PATH:/var/vcap/jobs/director/bin
 export PATH LD_LIBRARY_PATH
 export LANG=en_US.UTF-8
