--- a/src/bosh-director/spec/assets/nginx.conf.erb
+++ b/src/bosh-director/spec/assets/nginx.conf.erb
@@ -6,10 +6,18 @@ events {
 
 http {
   server {
-    listen <%= port %>;
+    listen unix:/<%= root %>/tmp/backend.sock;
+    listen <%= port %> ssl;
     server_name "";
 
     client_max_body_size 1G;
+
+    error_page 497 = @handler;
+
+    #ssl_certificate <%= root %>/config/blobstore_certificate.pem;
+    #ssl_certificate_key <%= root %>/config/blobstore_key.pem;
+    ssl_certificate <%= certificate_path %>;
+    ssl_certificate_key <%= key_path %>;
 
     location / {
       root <%= root %>;
@@ -25,6 +33,10 @@ http {
         auth_basic "Blobstore Write";
         auth_basic_user_file <%= write_users_path %>;
       }
+    }
+
+    location @handler {
+      proxy_pass http://unix:/<%= root %>/tmp/backend.sock:$request_uri;
     }
   }
 }
