--- a/jobs/blobstore/templates/blobstore.conf.erb
+++ b/jobs/blobstore/templates/blobstore.conf.erb
@@ -14,7 +14,7 @@ server {
   error_page 497 = @handler;
 
   ssl_certificate /var/vcap/jobs/blobstore/config/ssl_cert.pem;
-  ssl_certificate_key /var/vcap/jobs/blobstore/config/ssl_cert_key;
+  ssl_certificate_key /var/vcap/jobs/blobstore/config/ssl_key.pem;
 
   location / {
     root /var/vcap/store/blobstore/store/;
