Revert "updates to blobstore and director spec and templates for TLS blobstore"
- To not include with current release

[#151616536](https://www.pivotaltracker.com/story/show/151616536)

This reverts commit 68b407e1997d9aafd6a304c99ca298e215b0a3da.

Signed-off-by: Andrew Su <asu@pivotal.io>

--- a/jobs/blobstore/templates/blobstore.conf.erb
+++ b/jobs/blobstore/templates/blobstore.conf.erb
@@ -14,7 +14,7 @@ server {
   error_page 497 = @handler;
 
   ssl_certificate /var/vcap/jobs/blobstore/config/ssl_cert.pem;
-  ssl_certificate_key /var/vcap/jobs/blobstore/config/ssl_key.pem;
+  ssl_certificate_key /var/vcap/jobs/blobstore/config/ssl_cert_key;
 
   location / {
     root /var/vcap/store/blobstore/store/;
