--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -391,14 +391,21 @@ params['cloud'] = {
     'provider' => {
       'name' => cpi_job_name,
       'path' => "/var/vcap/jobs/#{cpi_job_name}/bin/cpi",
-  },
-  'properties' => {}
+    },
+    'properties' => {}
+}
+
+params['agent'] = {
+  'env' => {
+    'bosh' => p('agent.env.bosh')
+  }
 }
 
 params['cloud']['properties']['agent'] = {
   'ntp' => p('ntp'),
   'blobstore' => {'provider' => p('blobstore.provider'), 'options' => {} },
 }
+
 
 agent_blobstore_options =  params['cloud']['properties']['agent']['blobstore']['options']
 
