--- a/src/spec/assets/links_releases/links_release_template/jobs/consumer/templates/config.yml.erb
+++ b/src/spec/assets/links_releases/links_release_template/jobs/consumer/templates/config.yml.erb
@@ -4,4 +4,8 @@ a: <%= link("provider").p("a") %>
 b: <%= b %>
 <% end %>
 c: <%= link("provider").p("c") %>
+nested:
+  one: <%= link("provider").p("nested.one") %>
+  two: <%= link("provider").p("nested.two") %>
+  three: <% link("provider").if_p("nested.three") do |p| %><%= p %><% end %>
 provider_link_0_address: <%= link("provider").instances[0].address %>
