Fix upgrade tests for nested property lookups
Broken by 621d26817cbaee4afb05a2b1b5cc2fbcb5e35648

[#152338291](https://www.pivotaltracker.com/story/show/152338291)

Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/src/spec/assets/links_releases/links_release_template/jobs/consumer/templates/config.yml.erb
+++ b/src/spec/assets/links_releases/links_release_template/jobs/consumer/templates/config.yml.erb
@@ -5,7 +5,7 @@ b: <%= b %>
 <% end %>
 c: <%= link("provider").p("c") %>
 nested:
-  one: <%= link("provider").p("nested.one") %>
-  two: <%= link("provider").p("nested.two") %>
-  three: <% link("provider").if_p("nested.three") do |p| %><%= p %><% end %>
+  one: <%= link("provider").p("nested.one", "") %>
+  two: <%= link("provider").p("nested.two", "") %>
+  three: <%= link("provider").p("nested.three", "") %>
 provider_link_0_address: <%= link("provider").instances[0].address %>
