Change sandbox in preparation on DB TLS
- refactoring to allow DB to accept database options

[#147717361](https://www.pivotaltracker.com/story/show/147717361)

Signed-off-by: Gaurab Dey <gdey@pivotal.io>
Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -30,9 +30,16 @@ db: &bosh_db
   user: <%= database.username %>
   password: <%= database.password %>
 
+  <% if database.tls_enabled %>
+  tls:
+    enable: <%= database.tls_enabled %>
+    cert:
+      ca: <%= database.ca_path %>
+  <% else %>
   # Failure to set `sslmode` will produce following error
   # 'PG::Error: SSL error: decryption failed or bad record mac:'
   sslmode: "disable"
+  <% end %>
 
   connection_options:
     max_connections: 32
