Add DB TLS tests for mysql
- ssl_mode for mysql is default to verify_identity instead of verify_ca
- add CI job to test mysql in TLS mode

[#147717361](https://www.pivotaltracker.com/story/show/147717361)

Signed-off-by: Gaurab Dey <gdey@pivotal.io>
Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -32,7 +32,7 @@ db: &bosh_db
 
   <% if database.tls_enabled %>
   tls:
-    enable: <%= database.tls_enabled %>
+    enabled: <%= database.tls_enabled %>
     cert:
       ca: <%= database.ca_path %>
   <% else %>
