add initial support for configurable puma workers
[#153814076](https://www.pivotaltracker.com/story/show/153814076)

Signed-off-by: Kai Hofstetter <kai.hofstetter@sap.com>
Signed-off-by: Florian Nachtigall <florian.nachtigall@sap.com>

--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -8,6 +8,7 @@ params = {
   'port' => p('director.backend_port'),
   'max_tasks' => p('director.max_tasks'),
   'max_threads' => p('director.max_threads'),
+  'puma_workers' => p('director.puma_workers'),
   'logging' => {
     'level' => 'DEBUG',
     'file' =>  "/var/vcap/sys/log/director/<" + "%= ENV['COMPONENT'] %" + ">.debug.log"
