Allow mutual TLS connections to MYSQL and POSTGRES.
- Add BRATS test for GCP MySQL and Postgres

[#148609847](https://www.pivotaltracker.com/story/show/148609847)

Signed-off-by: Gaurab Dey <gdey@pivotal.io>
Signed-off-by: Bozhidar Lenchov <blenchov@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -35,6 +35,12 @@ db: &bosh_db
     enabled: <%= database.tls_enabled %>
     cert:
       ca: <%= database.ca_path %>
+      certificate: "/not-used/path/in/integration/tests"
+      private_key: "/not-used/path/in/integration/tests"
+    bosh_internal:
+      ca_provided: true
+      mutual_tls_enabled: false
+
   <% else %>
   # Failure to set `sslmode` will produce following error
   # 'PG::Error: SSL error: decryption failed or bad record mac:'
