--- a/jobs/director/templates/director.yml.erb.erb
+++ b/jobs/director/templates/director.yml.erb.erb
@@ -22,21 +22,6 @@ params = {
     'client_private_key_path' => '/var/vcap/jobs/director/config/nats_client_private_key',
   },
   'dir' => '/var/vcap/store/director',
-  'db' => {
-    'adapter' => p('director.db.adapter'),
-    'user' => p('director.db.user'),
-    'password' => p('director.db.password'),
-    'host' => p('director.db.host'),
-    'port' => p('director.db.port'),
-    'database' => p('director.db.database'),
-    'connection_options' => p('director.db.connection_options'),
-    'tls' => {
-      'enabled' => p('director.db.tls.enabled', false),
-      'cert' => {
-        'ca' => '/var/vcap/jobs/director/config/db/ca.pem'
-      }
-    }
-  },
   'snapshots' => {
     'enabled'=> p('director.enable_snapshots')
   },
@@ -54,6 +39,38 @@ params = {
       'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
 }
+
+director_db = {
+  'adapter' => p('director.db.adapter'),
+  'user' => p('director.db.user'),
+  'password' => p('director.db.password'),
+  'host' => p('director.db.host'),
+  'port' => p('director.db.port'),
+  'database' => p('director.db.database'),
+  'connection_options' => p('director.db.connection_options'),
+  'tls' => {
+    'enabled' => p('director.db.tls.enabled', false),
+    'cert' => {
+      'ca' => '/var/vcap/jobs/director/config/db/ca.pem',
+      'certificate' => '/var/vcap/jobs/director/config/db/client_certificate.pem',
+      'private_key' => '/var/vcap/jobs/director/config/db/client_private_key.key',
+    },
+    'bosh_internal' => {
+      'ca_provided' => false,
+      'mutual_tls_enabled' => false,
+    }
+  }
+}
+
+if_p('director.db.tls.cert.ca') do
+  director_db['tls']['bosh_internal']['ca_provided'] = true
+end
+
+if_p('director.db.tls.cert.certificate', 'director.db.tls.cert.private_key') do
+  director_db['tls']['bosh_internal']['mutual_tls_enabled'] = true
+end
+
+params['db'] = director_db
 
 config_server = {
     'enabled' => p('director.config_server.enabled')
