--- a/jobs/director/templates/pre-start.erb
+++ b/jobs/director/templates/pre-start.erb
@@ -4,6 +4,7 @@ set -e
 
 STORE_DIR=/var/vcap/store/director
 CONFIG_DIR=/var/vcap/jobs/director/config
+DB_MUTUAL_TLS_PRIVATE_KEY=/var/vcap/jobs/director/config/db/client_private_key.key
 
 mkdir -p $STORE_DIR
 chown -R vcap:vcap $STORE_DIR
@@ -12,3 +13,11 @@ chmod -R 0640 $CONFIG_DIR
 find $CONFIG_DIR -type d | xargs -n1 chmod 0750
 
 chown -R root:vcap $CONFIG_DIR
+
+# Need to change the owner and permission for the private key
+# used in DB Mutual TLS connections. The reason is that postgres
+# client does not allow a more privileged permission for the
+# private key that is greater than 600.
+# Refer to "32.18.2. Client Certificates" section on https://www.postgresql.org/docs/9.6/static/libpq-ssl.html
+chmod 0600 $DB_MUTUAL_TLS_PRIVATE_KEY
+chown vcap:vcap $DB_MUTUAL_TLS_PRIVATE_KEY
