Set ulimit for the nats job to 65k
[#154376203](https://www.pivotaltracker.com/story/show/154376203)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/jobs/nats/templates/nats_ctl.erb
+++ b/jobs/nats/templates/nats_ctl.erb
@@ -17,6 +17,7 @@ case $1 in
     echo $$ > $PIDFILE
     chown -R $RUNAS:$RUNAS $RUN_DIR $LOG_DIR
 
+    ulimit -n 65536
     exec chpst -u $RUNAS:$RUNAS /var/vcap/packages/gonats/bin/gnatsd \
       -c $CONFIG_FILE \
       >>  $LOG_DIR/nats.stdout.log \
