Make update strategy configurable through env var
DEFAULT_UPDATE_STRATEGY can now be set to override the default update
strategy to be used in integration tests. If not set it will fall back
to nil which is the current legacy / in-place-replace-vm

[#155019024](https://www.pivotaltracker.com/story/show/155019024)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -125,6 +125,7 @@ user_management:
 enable_post_deploy: <%= enable_post_deploy %>
 enable_nats_delivered_templates: <%= enable_nats_delivered_templates %>
 enable_cpi_resize_disk: <%= enable_cpi_resize_disk %>
+default_update_strategy: <%= default_update_strategy %>
 
 <% if config_server_enabled %>
 config_server:
