Add CPI API version to CPI request
- Updated dummy CPI to handle api_version
- ExternalCpi now extends Bosh::Cloud

[#155297278](https://www.pivotaltracker.com/story/show/155297278)

Signed-off-by: Bozhidar Lenchov <blenchov@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/cpi_config.json.erb
+++ b/src/bosh-dev/assets/sandbox/cpi_config.json.erb
@@ -8,5 +8,7 @@
          "blobstore_path": "<%= blobstore_storage_dir %>"
       }
     }
-  }
+  }<% unless dummy_cpi_api_version.nil? %>,
+  "api_version": <%= dummy_cpi_api_version %>
+  <% end %>
 }
