--- a/jobs/registry/templates/registry.yml.erb
+++ b/jobs/registry/templates/registry.yml.erb
@@ -18,6 +18,10 @@
     }
   }
 
+  if_p('registry.additional_users') do |registry_additional_users|
+    params['http']['additional_users'] =  registry_additional_users
+  end
+
   if_p('aws.region') do |region|
     params['cloud'] = {}
     cloud_params = params['cloud']
