Rename ScheduledOrphanCleanup to be more specific
- ScheduledOrphanCleanup -> ScheduledOrphanedDiskCleanup

[#139870697](https://www.pivotaltracker.com/story/show/139870697)

Signed-off-by: James Myers <jmyers@pivotal.io>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -111,7 +111,7 @@ if_p('director.backup_schedule') do |backup_schedule|
 end
 
 params['scheduled_jobs'] << {
-  'command' => 'ScheduledOrphanCleanup',
+  'command' => 'ScheduledOrphanedDiskCleanup',
   'schedule' => p('director.disks.cleanup_schedule'),
   'params' => [{'max_orphaned_age_in_days' => p('director.disks.max_orphaned_age_in_days')}]
 }
