Allow scheduler to use persistent-disks
Also fix delete orphaned vms schedule to be 5m instead of 5s.

[#139870697](https://www.pivotaltracker.com/story/show/139870697)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -112,7 +112,7 @@ end
 
 params['scheduled_jobs'] << {
   'command' => 'ScheduledOrphanedVMCleanup',
-  'schedule' => '0,5,10,15,20,25,30,35,40,45,50,55 * * * * * UTC'
+  'schedule' => '*/5 * * * * UTC'
 }
 
 params['scheduled_jobs'] << {
