--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -112,7 +112,7 @@ end
 
 params['scheduled_jobs'] << {
   'command' => 'ScheduledOrphanedVMCleanup',
-  'schedule' => '*/5 * * * * UTC'
+  'schedule' => p('director.vms.cleanup_schedule')
 }
 
 params['scheduled_jobs'] << {
