Add integration test for orphan VM deletion
[#139870697](https://www.pivotaltracker.com/story/show/139870697)

Co-authored-by: Michael Xu <mxu@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -19,6 +19,8 @@ scheduled_jobs:
     schedule: '*/2 * * * * *'
   - command: ScheduledBackup
     schedule: '*/1 * * * * *'
+  - command: ScheduledOrphanedVMCleanup
+    schedule: '*/10 * * * * *'
 
 db: &bosh_db
   adapter: <%= database.adapter %>
