Add in `cpi_api_test_max_version` property
to director spec to limit cpi version used

[#157881356] (https://www.pivotaltracker.com/story/show/157881356)

Signed-off-by: Bozhidar Lenchov <blenchov@pivotal.io>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -37,6 +37,7 @@ params = {
       'include_index' => p('director.local_dns.include_index'),
       'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
+  'cpi_api_test_max_version' => p('director.cpi_api_test_max_version'),
 }
 
 director_db = {
