--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -128,6 +128,7 @@ enable_post_deploy: <%= enable_post_deploy %>
 enable_nats_delivered_templates: <%= enable_nats_delivered_templates %>
 enable_cpi_resize_disk: <%= enable_cpi_resize_disk %>
 default_update_vm_strategy: <%= default_update_vm_strategy %>
+cpi_api_test_max_version: <%= cpi_api_test_max_version %>
 
 <% if config_server_enabled %>
 config_server:
