--- a/jobs/director/templates/post-start.erb
+++ b/jobs/director/templates/post-start.erb
@@ -3,7 +3,7 @@
 echo "Checking if director is ready..."
 
 timeout 5m bash -c '
-  while ! curl --insecure --fail https://127.0.0.1:<%= p('director.port') %>/info; do
+  while ! curl --insecure --fail https://localhost:<%= p('director.port') %>/info; do
     sleep 1
   done
 '
