Refresh before deleting compilation VMs
- The double-delete was happening because of stale ORM models, where
instances.vms was returning records that had already been deleted
- by refreshing before deleting, we ensure that we will only try to
delete VMs that haven't already been removed
- additionally, we found problems with the test configuration for tests
that tried to use CPI create_vm call failures to test that things are
cleaned up properly
- we addressed those by moving the instrumentation to the
set_vm_metadata calls, for which the cleanup is a BOSH (not CPI)
responsibility

Co-Authored-By: Josh Russett <jrussett@pivotal.io>
Co-Authored-By: Chris Dutra <cdutra@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -180,6 +180,7 @@ nats:
   client_ca_private_key_path: <%= nats_client_ca_private_key_path %>
 
 agent:
+  agent_wait_timeout: <%= agent_wait_timeout %>
   env:
     bosh:
       dummy_agent_key_merged: "This key must be sent to agent"
