Write audit logs into log-files instead to syslog
- Change director property 'director.log_access_events_to_syslog' to 'director.log_access_events'
- Throw an error if 'director.log_access_events_to_syslog' is still used
- Introduce new audit log files in '/var/vcap/sys/log/director/'
- Introduce director audit log file 'audit.log'
- Introduce worker audit log files 'audit_worker_x.log'

[#159191961](https://www.pivotaltracker.com/story/show/159191961)

Co-authored-by: Mario Manno <mario.manno@suse.com>
Co-authored-by: Manuel Dewald <m.dewald@sap.com>
Co-authored-by: David Ansari <david.ansari@sap.com>
Co-authored-by: Kai Hofstetter <kai.hofstetter@sap.com>
Co-authored-by: Sebastian Heid <sebastian.heid@sap.com>
Co-authored-by: Denis Langer <denis.langer@sap.com>

--- a/jobs/director/templates/director.yml.erb
+++ b/jobs/director/templates/director.yml.erb
@@ -30,13 +30,14 @@ params = {
   'enable_cpi_resize_disk' => p('director.enable_cpi_resize_disk'),
   'generate_vm_passwords' => p('director.generate_vm_passwords'),
   'remove_dev_tools' => p('director.remove_dev_tools'),
-  'log_access_events_to_syslog' => p('director.log_access_events_to_syslog'),
+  'log_access_events' => p('director.log_access_events'),
   'flush_arp' => p('director.flush_arp'),
   'local_dns' => {
       'enabled' => p('director.local_dns.enabled'),
       'include_index' => p('director.local_dns.include_index'),
       'use_dns_addresses' => p('director.local_dns.use_dns_addresses'),
   },
+  'audit_log_path' => '/var/vcap/sys/log/director',
 }
 
 director_db = {
