--- a/src/bosh-dev/assets/sandbox/director_test.yml.erb
+++ b/src/bosh-dev/assets/sandbox/director_test.yml.erb
@@ -170,6 +170,8 @@ remove_dev_tools: <%= remove_dev_tools %>
 
 record_events: true
 
+log_access_events: true
+
 director_ips: <%= director_ips %>
 
 nats:
@@ -184,3 +186,5 @@ agent:
   env:
     bosh:
       dummy_agent_key_merged: "This key must be sent to agent"
+
+audit_log_path: <%= audit_log_path %>
